# rust-fs-app

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  todo.todo  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.svelte  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: background.rs  main.rs  start_on_boot.rs  window_events.rs
src-tauri/src/fs_app/: __frequent_files.rs  dir_content.rs  get_dir_content.rs  get_os_disks.rs  mod.rs  modify_files.rs  notify_changes.rs  open_application.rs  timer.rs
src-tauri/src/fs_app/cacher/: __searches.rs  deleted_files.rs  discover.rs  mod.rs
src-tauri/src/remove_app/: aplication_data.rs  get_reg_content.rs  launch_app.rs  mod.rs
src/alerts/: alerts.ts
src/components/apps/mainContent/: collectionItem.svelte  mainContentApps.svelte  rClickMenu.svelte  rClickMenuTypes.ts
src/components/common/: RClickMenu.module.css  eventListenerTypes.ts  icons.svelte  icons.ts  lateralBar.module.css  menuSeparation.svelte  topMenu.module.css
src/context/: appsContext.ts  currentWindowContext.ts  dirTreeLoadStatus.ts  fileContext.ts  fileCopyContext.ts  isImage.ts  osDisks.ts  pagination.ts  preVisualization.ts  rclickMenuFs.ts  searchParamsTopMenuFs.ts  shortcutKey.ts  shortcutKeyFunctions.ts
src/hooks/: createCounter.ts  handleResizeBar.ts  hanldeOpenFolder.ts  setFilesBox.ts  splitInclusive.svelte  useFormattedByteSize.ts  useLimitedArraySize.ts  useSortedArray.ts  useSplitPath.ts
src/tauriApi/: getConstantPaths.ts  invokeApi.ts  tauriApiTypes.d.ts
(+19 files in other folders)
